src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Report Opportunity Process</fullName>
        <description>Process for tracking Report Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Opportunity Process</fullName>
        <description>Process for tracking Sales Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Added to Panel</fullName>
        </values>
        <values>
            <fullName>Closed RFP Process</fullName>
        </values>
        <values>
            <fullName>Defer %28sub for closed lost%29</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Meet with Decision Maker</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Submitted RFP</fullName>
        </values>
        <values>
            <fullName>Successful</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>A_Mileage_Billings_Total__c</fullName>
        <formula>A_Mileage_Miles_Total__c *  Mileage_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A Mileage Activity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A_Mileage_Miles_Nurse_Total__c</fullName>
        <label>A - Mileage Miles (CM) Total</label>
        <summarizedField>Case_Note_Entry__c.Mileage_Nurse__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.NurseEntry__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Mileage_Miles_Total__c</fullName>
        <label>A - Mileage Miles Total</label>
        <summarizedField>Case_Note_Entry__c.Mileage__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Rush__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Non_Professional_Billings_Total__c</fullName>
        <formula>IF(Amount_Locked__c,
A_Non_Professional_Hours_Total__c * Travel_Wait_Rate__c ,
A_Non_Professional_Hours_Total__c * Travel_Wait_Rate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A - Non Professional Activity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A_Non_Professional_Hours_Nurse_Total__c</fullName>
        <label>A - Non Professional Units (CM) Total</label>
        <summarizedField>Case_Note_Entry__c.Travel_Wait_Hours_Nurse__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.NurseEntry__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Non_Professional_Hours_Total__c</fullName>
        <description>A - Non Professional Hours Total</description>
        <label>A - Non Professional Units Total</label>
        <summarizedField>Case_Note_Entry__c.Travel_Wait_Hours__c</summarizedField>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Note_Approval_Date_Time__c</fullName>
        <description>A Note Approval Date / Time</description>
        <label>A Note Approval Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>A_Notes_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A Notes Approved</description>
        <inlineHelpText>Field to indicate that A Notes have been approved via the formal Approval process.</inlineHelpText>
        <label>A Notes Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_Professional_Billings_Total__c</fullName>
        <formula>IF(Amount_Locked__c,
A_Professional_Hours_Total__c * Professional_Rate__c,
A_Professional_Hours_Total__c * Professional_Rate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A - Professional Activity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A_Professional_Hours_Nurse_Total__c</fullName>
        <label>A - Professional Units (CM) Total</label>
        <summarizedField>Case_Note_Entry__c.Professional_Hours_Nurse__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.NurseEntry__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Professional_Hours_Total__c</fullName>
        <description>A - Professional Hours Total</description>
        <label>A - Professional Units Total</label>
        <summarizedField>Case_Note_Entry__c.Professional_Hours__c</summarizedField>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>A_Rating_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box before approving when Report Review/Rating has been completed.</inlineHelpText>
        <label>A - Rating Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_job_evaluation_was_provided_to_PTP_on__c</fullName>
        <description>A job evaluation was provided to PTP on:</description>
        <label>A job evaluation was provided to PTP on:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Mileage_Rate__c</fullName>
        <label>Account Mileage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Professional_Rate__c</fullName>
        <label>Account Professional Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Rush_Mileage_Rate__c</fullName>
        <label>Account Rush Mileage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Rush_Professional_Rate__c</fullName>
        <label>Account Rush Professional Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Rush_Travel_Wait_Rate__c</fullName>
        <label>Account Rush Travel Wait Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Travel_Wait_Rate__c</fullName>
        <label>Account Travel Wait Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actions_to_facilitate_return_to_work__c</fullName>
        <label>Actions to facilitate return to work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActualCompletedDate__c</fullName>
        <label>Actual Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>Additional Comments</description>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adjusted_BT_Comments__c</fullName>
        <inlineHelpText>Admin insert any adjustments made to CM billable time for this report</inlineHelpText>
        <label>Adjusted BT Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aging__c</fullName>
        <formula>NOW() - B_Note_Approval_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountDifference__c</fullName>
        <formula>Amount + Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amount Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount of payment posted</description>
        <label>Paid Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_date_of_release_to_full_duty__c</fullName>
        <label>Anticipated date of release to full duty</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_date_of_release_to_mod_duty__c</fullName>
        <label>Anticipated date of release to mod duty</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AppointmentVisit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appointment / Visit</label>
        <referenceTo>Appointment_Visit__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appointment_Visit_Date__c</fullName>
        <description>Appointment / Visit Date</description>
        <label>Appointment / Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Pending A Approval</fullName>
                </value>
                <value>
                    <fullName>Pending B Approval</fullName>
                </value>
                <value>
                    <fullName>Pending QA Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Distribution Approval</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_permanent_restrictions_anticipated__c</fullName>
        <description>Are permanent restrictions anticipated</description>
        <label>Are permanent restrictions anticipated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoCreate__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used to flag an Opportunity when the Auto-Create trigger needs to fire.</description>
        <label>Auto-Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BNonProfessionalTotal_Billing__c</fullName>
        <formula>B_Non_Professional_Billings_Total__c + B_Rush_Non_Professional_Billings_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B - Non-Professional Total Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTotalProfessionalBilling__c</fullName>
        <formula>B_Professional_Billings_Total__c + B_Rush_Professional_Billings_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B - Total Professional Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Mileage_Billings_Total__c</fullName>
        <formula>IF(Amount_Locked__c,
B_Mileage_Miles_Total__c * Mileage_Rate__c,
B_Mileage_Miles_Total__c * Mileage_Rate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B Mileage Activity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Mileage_Miles_Total__c</fullName>
        <label>B Mileage Miles Total</label>
        <summarizedField>Case_Note_Entry__c.Final_Mileage__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Rush__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>B_Non_Professional_Billings_Total__c</fullName>
        <formula>IF(Amount_Locked__c,
B_Non_Professional_Hours_Total__c * Travel_Wait_Rate__c,
B_Non_Professional_Hours_Total__c * Travel_Wait_Rate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B - Non Professional Activity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Non_Professional_Hours_Total__c</fullName>
        <label>B - Non Professional Units Total</label>
        <summarizedField>Case_Note_Entry__c.Adj_Travel_Wait_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Rush__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>B_Note_Approval_Date_Time__c</fullName>
        <label>B Note Approval Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>B_Notes_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>B Notes Approved</description>
        <inlineHelpText>Field to indicate that A Notes have been approved via the formal Approval process.</inlineHelpText>
        <label>B Notes Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B_Professional_Billings_Total__c</fullName>
        <formula>IF(Amount_Locked__c,
B_Professional_Hours_Total__c * Professional_Rate__c ,
B_Professional_Hours_Total__c * Professional_Rate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B - Professional Activity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Professional_Hours_Total__c</fullName>
        <description>B Professional Hours Total</description>
        <label>B - Professional Units Total</label>
        <summarizedField>Case_Note_Entry__c.Adj_Professional_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Rush__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>B_Rush_Mileage_Billings_Total__c</fullName>
        <formula>IF(Amount_Locked__c,
B_Rush_Mileage_Miles_Total__c * Rush_Mileage_Rate__c ,
B_Rush_Mileage_Miles_Total__c * Rush_Mileage_Rate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B Rush Mileage Activity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Rush_Mileage_Miles_Total__c</fullName>
        <description>B Mileage Miles Total</description>
        <label>B Rush Mileage Miles Total</label>
        <summarizedField>Case_Note_Entry__c.Adj_Mileage__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Rush__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>B_Rush_Non_Professional_Billings_Total__c</fullName>
        <formula>IF(Amount_Locked__c,
B_Rush_Non_Professional_Hours_Total__c * Rush_Travel_Wait_Rate__c,
B_Rush_Non_Professional_Hours_Total__c * Rush_Travel_Wait_Rate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B - Rush Non Professional Activity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Rush_Non_Professional_Hours_Total__c</fullName>
        <description>B - Rush Non Professional Hours Total</description>
        <label>B - Rush Non Professional Units Total</label>
        <summarizedField>Case_Note_Entry__c.Adj_Travel_Wait_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Rush__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>B_Rush_Professional_Billings_Total__c</fullName>
        <formula>IF(Amount_Locked__c,
B_Rush_Professional_Hours_Total__c * Rush_Professional_Rate__c,
B_Rush_Professional_Hours_Total__c * Rush_Professional_Rate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B - Rush Professional Activity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Rush_Professional_Hours_Total__c</fullName>
        <description>B - Rush Professional Hours Total</description>
        <label>B - Rush Professional Units Total</label>
        <summarizedField>Case_Note_Entry__c.Adj_Professional_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Rush__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <description>Balance of Invoice Pending Payment</description>
        <label>Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRR_Assigned__c</fullName>
        <description>Sales/Marketing Rep assigned to specific Case and Case Report/Opporunity</description>
        <label>CRR Assigned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRR_Supervisor__c</fullName>
        <label>CRR Supervisor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Captured_Charge_Count__c</fullName>
        <label>Captured Charge Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Captured_Charges__c</fullName>
        <label>Captured Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Captured_Transfer_Count__c</fullName>
        <label>Captured Transfer Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Captured_Transfers__c</fullName>
        <label>Captured Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CarbonCopy__c</fullName>
        <inlineHelpText>Indicate all parties (attorneys, customer TCM, etc) that will receive a copy of this report.  Must include name and full address.  If no cc: indicate none</inlineHelpText>
        <label>CC:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Management_Recommendation__c</fullName>
        <description>Case Management Recommendation</description>
        <label>Case Management Recommendation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Manager_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Manager Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Manager_Comments_To_QC__c</fullName>
        <label>Case Manager Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Manager_Comments__c</fullName>
        <description>Case Manager Comments</description>
        <inlineHelpText>See CM Manual - Reference &amp; Examples - This should not be a repeat of the QSU</inlineHelpText>
        <label>Case Manager Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Payout_Count__c</fullName>
        <label>Completed Payouts Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_Payouts__c</fullName>
        <label>Completed Payouts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comprehensive_Report_Dealyed_Because__c</fullName>
        <description>Comprehensive Report  Delayed Because</description>
        <inlineHelpText>Select all that apply.</inlineHelpText>
        <label>Comprehensive Report  Delayed Because</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EE missed appt this servicing period</fullName>
                </value>
                <value>
                    <fullName>Lack of information to complete report</fullName>
                </value>
                <value>
                    <fullName>File remains on temporary hold</fullName>
                </value>
                <value>
                    <fullName>Awaiting P&amp;S report</fullName>
                </value>
                <value>
                    <fullName>Need for physician information</fullName>
                </value>
                <value>
                    <fullName>No appointment this reporting period</fullName>
                </value>
                <value>
                    <fullName>Info from last physician appt is pending</fullName>
                </value>
                <value>
                    <fullName>Physician contact info is pending</fullName>
                </value>
                <value>
                    <fullName>Permanent &amp; Stationary report is pending</fullName>
                </value>
                <value>
                    <fullName>Stable &amp; Ratable report is pending</fullName>
                </value>
                <value>
                    <fullName>Stationary report is pending</fullName>
                </value>
                <value>
                    <fullName>DO NOT COMPLETE REPORT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact #</description>
        <label>Contact #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CoveringCMProfHours__c</fullName>
        <label>Covering CM Prof. Units Approved</label>
        <summarizedField>Case_Note_Entry__c.Professional_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Covering_Nurse__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CoveringCMTravelWaitHoursCredit__c</fullName>
        <label>Covering CM Travel/Wait Units Approved</label>
        <summarizedField>Case_Note_Entry__c.Travel_Wait_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Covering_Nurse__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Covering_NCM_Mileage__c</fullName>
        <label>Covering CM Mileage</label>
        <summarizedField>Case_Note_Entry__c.Mileage_Nurse__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Covering_Nurse__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Covering_NCM_Prof_Hours__c</fullName>
        <label>Covering CM Prof. Units</label>
        <summarizedField>Case_Note_Entry__c.Professional_Hours_Nurse__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Covering_Nurse__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Covering_NCM_Travel_Wait_Hours__c</fullName>
        <label>Covering CM Travel/Wait Units</label>
        <summarizedField>Case_Note_Entry__c.Travel_Wait_Hours_Nurse__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Note_Entry__c.Covering_Nurse__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Note_Entry__c.Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Medications__c</fullName>
        <description>Current Medications</description>
        <inlineHelpText>Provide names of all current medications prescribed by ALL treating physicians. Address dosage &amp; frequency in the Treatment Plan &quot;Regarding Medications&quot;
Non-industrial medications should also be listed here, dosage &amp; frequency noted in Treatment Plan</inlineHelpText>
        <label>Current Medications</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Prognosis__c</fullName>
        <description>Current Prognosis</description>
        <inlineHelpText>Indicate excellent, good, fair, poor followed by description of anticipated recovery status. Also include  which criteria this is based upon i.e. PTP, consulting MD, ACOEM, ADA, NCM.</inlineHelpText>
        <label>Current Prognosis</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Treatment__c</fullName>
        <description>Current Treatment</description>
        <inlineHelpText>If more than five treatment recommendations, list as 1. 2. 3. 4. 5. 6.

For one to five treatment recommendations, write in narrative.</inlineHelpText>
        <label>Current Treatment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Work_Status__c</fullName>
        <description>Current Work Status</description>
        <inlineHelpText>Indicate full duty, modified duty, Temporary Total Disability (TTD), permanently disabled, retired, unemployed.</inlineHelpText>
        <label>Current Work Status</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomBillCodeProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CustomBillCodeProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_JA_was__c</fullName>
        <description>Date JA was recommended, authorized, received, requested, provided</description>
        <inlineHelpText>Date JA was recommended, authorized, received, requested, provided</inlineHelpText>
        <label>On:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Job_Evaluation_Recommended__c</fullName>
        <description>Date JD requested/received/provided</description>
        <inlineHelpText>Select date for current JD status; leave blank if not available or not applicable</inlineHelpText>
        <label>Date JD requested/received/provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mailed__c</fullName>
        <description>Date when Report Card was mailed to Employee.</description>
        <label>Date Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Posted__c</fullName>
        <description>Date payment was posted</description>
        <label>Date Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_from_injury_to_referral_date__c</fullName>
        <description>Time from injury to referral date.</description>
        <inlineHelpText>Enter the number of days, if injury and referral are on the same day, enter the number zero (0).</inlineHelpText>
        <label>Days from injury to referral date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <label>Diagnosis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnostics_Evidence_Based_Information__c</fullName>
        <description>Diagnostics Studies</description>
        <inlineHelpText>Diagnostics: Indicate date of study; type of study (x-ray, CT scan, MRI); body part; findings; interpreting physician; and facility where completed.  Only include diagnostics completed during the current reporting period.</inlineHelpText>
        <label>Current Diagnostics</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Did_Employee_cooperate_with_NCM__c</fullName>
        <description>This will indicate if ISYS should mail a Report Card to the Employee.</description>
        <inlineHelpText>If the Employee cooperated with NCM at time of Closure, select &quot;Yes&quot; and a Report Card will be mailed to them.</inlineHelpText>
        <label>Did Employee cooperate with NCM?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>